--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <canvas id=canvas></canvas>
   <div id=container></div>
   <script src="js/three.js"></script>
+  <script src="js/vr-display.js"></script>
   <script src="js/OBJLoader.js"></script>
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
