--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     const renderer = new THREE.WebGLRenderer({
       canvas,
     });
+    renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);
     renderer.sortObjects = false;
     renderer.vr.enabled = true;
