--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
     camera.position.set(0, 1, 1);
     camera.rotation.order = 'YXZ';
 
+    const fakeDisplay = window.navigator.createVRDisplay();
+    fakeDisplay.setSize(window.innerWidth * window.devicePixelRatio, window.innerHeight * window.devicePixelRatio);
+    fakeDisplay.position.copy(camera.position);
+    fakeDisplay.quaternion.copy(camera.quaternion);
+    fakeDisplay.update();
+    fakeDisplay.requestPresent([{source: canvas}])
+      .then(() => {
+        renderer.vr.setDevice(fakeDisplay);
+      });
+
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
     const renderer = new THREE.WebGLRenderer({
@@ -1360,15 +1370,6 @@
       window.requestAnimationFrame(animate);
     }
     window.requestAnimationFrame(animate);
-
-    const fakeDisplay = window.navigator.createVRDisplay();
-    fakeDisplay.position.copy(camera.position);
-    fakeDisplay.quaternion.copy(camera.quaternion);
-    fakeDisplay.update();
-    fakeDisplay.requestPresent([{source: canvas}])
-      .then(() => {
-        renderer.vr.setDevice(fakeDisplay);
-      });
 
     const _handleKey = (code, shiftKey) => {
       if (code === 8) { // backspace
