--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div id=container></div>
   <script src="js/three.js"></script>
   <script src="js/vr-display.js"></script>
+  <script src="js/skin.js"></script>
   <script src="js/OBJLoader.js"></script>
   <script src="js/ScreenQuad.js"></script>
   <script src="js/keycode.js"></script>
