Add initial multiplayer connection support

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     };
 
     const registryUrl = 'http://zeovr.io:9000';
+    const SIDES = ['left', 'right'];
     const RAY_COLOR = 0x44c2ff;
     const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
     const rayDistance = 10;
@@ -123,6 +124,8 @@
     ];
 
     const upVector = new THREE.Vector3(0, 1, 0);
+    const armQuaternionOffset = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0, -1, 0), new THREE.Vector3(0, 0, -1));
+
     const localVector = new THREE.Vector3();
     const localVector2 = new THREE.Vector3();
     const localVector3 = new THREE.Vector3();
@@ -215,9 +218,19 @@
               case 'playerEnter': {
                 const {id} = j;
 
-                const playerMesh = _makePlayerMesh(id);
+                const playerMesh = _makeRemotePlayerMesh(id);
                 scene.add(playerMesh);
                 playerMeshes.push(playerMesh);
+
+                const skinImg = new Image();
+                skinImg.crossOrigin = 'Anonymous';
+                skinImg.src = 'img/skins/male.png';
+                skinImg.onload = () => {
+                  playerMesh.setImage(skinImg);
+                };
+                skinImg.onerror = err => {
+                  console.warn('skin image error', err.stack);
+                };
 
                 console.log('player enter', id);
                 break;
@@ -460,6 +473,98 @@
       scene.add(handMesh);
       handMeshes[i] = handMesh;
     }
+
+    const _makeRemotePlayerMesh = (() => {
+      const hmdQuaternion = new THREE.Quaternion();
+      const hmdEuler = new THREE.Euler();
+      const controllerPosition = new THREE.Vector3();
+      const controllerQuaternion = new THREE.Quaternion();
+      const playerEuler = new THREE.Euler();
+      const meshWorldPosition = new THREE.Vector3();
+      const meshEyeWorldPosition = new THREE.Vector3();
+      const playerQuaternionInverse = new THREE.Quaternion();
+      const headQuaternion = new THREE.Quaternion();
+      const headQuaternionInverse = new THREE.Quaternion();
+      const localUpVector = new THREE.Vector3();
+      const armWorldPosition = new THREE.Vector3();
+      const armQuaternion = new THREE.Quaternion();
+      const armQuaternionInverse = new THREE.Quaternion();
+      const rotationMatrix = new THREE.Matrix4();
+
+      const _mod = (value, divisor) => {
+        const n = value % divisor;
+        return n < 0 ? (divisor + n) : n
+      };
+      const _angleDiff = (a, b) => _mod((b - a) + Math.PI, Math.PI * 2) - Math.PI;
+
+      return playerId => {
+        const mesh = skin({
+          limbs: true,
+        });
+        mesh.playerId = playerId;
+
+        const uniforms = THREE.UniformsUtils.clone(skin.SKIN_SHADER.uniforms);
+
+        mesh.onBeforeRender = (function(onBeforeRender) {
+          return function() {
+            mesh.material.uniforms.headRotation.value.copy(uniforms.headRotation.value);
+            mesh.material.uniforms.leftArmRotation.value.copy(uniforms.leftArmRotation.value);
+            mesh.material.uniforms.rightArmRotation.value.copy(uniforms.rightArmRotation.value);
+            mesh.material.uniforms.theta.value = uniforms.theta.value;
+            mesh.material.uniforms.headVisible.value = uniforms.headVisible.value;
+            mesh.material.uniforms.hit.value = uniforms.hit.value;
+
+            onBeforeRender.apply(this, arguments);
+          };
+        })(mesh.onBeforeRender);
+        mesh.update = playerMatrix => {
+          hmdQuaternion.fromArray(playerMatrix.hmd.quaternion);
+          hmdEuler.setFromQuaternion(hmdQuaternion, camera.rotation.order);
+          playerEuler.setFromQuaternion(mesh.quaternion, camera.rotation.order);
+          const angleDiff = _angleDiff(hmdEuler.y, playerEuler.y);
+          const angleDiffAbs = Math.abs(angleDiff);
+          if (angleDiffAbs > Math.PI / 2) {
+            playerEuler.y += (angleDiffAbs - (Math.PI / 2)) * (angleDiff < 0 ? 1 : -1);
+            mesh.quaternion.setFromEuler(playerEuler);
+          }
+
+          mesh.getWorldPosition(meshWorldPosition);
+          mesh.eye.getWorldPosition(meshEyeWorldPosition);
+          mesh.position.fromArray(playerMatrix.hmd.position)
+            .sub(meshEyeWorldPosition)
+            .add(meshWorldPosition);
+
+          playerQuaternionInverse.copy(mesh.quaternion).inverse();
+          headQuaternion.copy(playerQuaternionInverse).multiply(hmdQuaternion);
+          headQuaternionInverse.copy(headQuaternion).inverse();
+          uniforms.headRotation.value.set(headQuaternionInverse.x, headQuaternionInverse.y, headQuaternionInverse.z, headQuaternionInverse.w);
+          mesh.head.quaternion.copy(headQuaternion);
+          mesh.updateMatrixWorld();
+
+          for (let i = 0; i < SIDES.length; i++) {
+            const side = SIDES[i];
+            controllerPosition.fromArray(playerMatrix.gamepads[i].position);
+            controllerQuaternion.fromArray(playerMatrix.gamepads[i].quaternion);
+            localUpVector.copy(upVector).applyQuaternion(controllerQuaternion);
+            mesh.arms[side].getWorldPosition(armWorldPosition);
+            rotationMatrix.lookAt(
+              armWorldPosition,
+              controllerPosition,
+              localUpVector
+            );
+            armQuaternion
+              .setFromRotationMatrix(rotationMatrix)
+              .multiply(armQuaternionOffset)
+              .premultiply(playerQuaternionInverse);
+            armQuaternionInverse.copy(armQuaternion).inverse();
+            const armRotation = uniforms[side === 'left' ? 'leftArmRotation' : 'rightArmRotation'];
+            armRotation.value.set(armQuaternionInverse.x, armQuaternionInverse.y, armQuaternionInverse.z, armQuaternionInverse.w);
+          }
+        };
+
+        return mesh;
+      };
+    })();
 
     const portalGeometry = new THREE.PlaneBufferGeometry(gridWorldSize, gridWorldSize);
     const portalBackGeometry = portalGeometry.clone()
