Major multiplayer data reafactoring

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
     let links = [];
     const _getCurrentLinks = () => links.slice(0, 8);
 
-    const numPlayerMatrixElements = (3+4)*(1+2);
+
+    const numPlayerMatrixElements =
+      (3+4) + // hmd
+      (1 + (3+4)) * 2 + // gamepads
+      (1 + (5 * (3+3))) * 2; // hands
     const playerMatrix = new ArrayBuffer(numPlayerMatrixElements * Float32Array.BYTES_PER_ELEMENT);
     playerMatrix.setArrayBuffer = (() => {
       const uint8Array = new Uint8Array(playerMatrix);
@@ -108,20 +112,46 @@
         uint8Array.set(new Uint8Array(newArrayBuffer));
       };
     })();
+    let playerMatrixIndex = 0;
+    const _getPlayerMatrixIndex = n => {
+      const oldPlayerMatrixIndex = playerMatrixIndex;
+      playerMatrixIndex += n;
+      return oldPlayerMatrixIndex;
+    };
     playerMatrix.hmd = {
-      position: new Float32Array(playerMatrix, (0)*Float32Array.BYTES_PER_ELEMENT, 3),
-      quaternion: new Float32Array(playerMatrix, (3)*Float32Array.BYTES_PER_ELEMENT, 4),
+      position: new Float32Array(playerMatrix, _getPlayerMatrixIndex(3*Float32Array.BYTES_PER_ELEMENT), 3),
+      quaternion: new Float32Array(playerMatrix, _getPlayerMatrixIndex(4*Float32Array.BYTES_PER_ELEMENT), 4),
+    };
+    const _makePlayerMatrixGamepad = () => {
+      const enabled = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
+      const position = new Float32Array(playerMatrix, _getPlayerMatrixIndex(3*Float32Array.BYTES_PER_ELEMENT), 3);
+      const quaternion = new Float32Array(playerMatrix, _getPlayerMatrixIndex(4*Float32Array.BYTES_PER_ELEMENT), 4);
+
+      return {
+        enabled,
+        position,
+        quaternion,
+      };
     };
     playerMatrix.gamepads = [
-      {
-        position: new Float32Array(playerMatrix, (3+4)*Float32Array.BYTES_PER_ELEMENT, 3),
-        quaternion: new Float32Array(playerMatrix, (3+4+3)*Float32Array.BYTES_PER_ELEMENT, 4),
-      },
-      {
-        position: new Float32Array(playerMatrix, (3+4+3+4)*Float32Array.BYTES_PER_ELEMENT, 3),
-        quaternion: new Float32Array(playerMatrix, (3+4+3+4+3)*Float32Array.BYTES_PER_ELEMENT, 4),
-      },
+      _makePlayerMatrixGamepad(),
+      _makePlayerMatrixGamepad(),
     ];
+    const _makePlayerMatrixHands = () => {
+      const enabled = new Uint32Array(playerMatrix, _getPlayerMatrixIndex(Uint32Array.BYTES_PER_ELEMENT), 1);
+      const data = new Float32Array(playerMatrix, _getPlayerMatrixIndex(5*4*Float32Array.BYTES_PER_ELEMENT), 3);
+      return {
+        enabled,
+        data,
+      };
+    };
+    playerMatrix.hands = (() => {
+      const hands = Array(2);
+      for (let i = 0; i < hands.length; i++) {
+        hands[i] = _makePlayerMatrixHands();
+      }
+      return hands;
+    })();
 
     const upVector = new THREE.Vector3(0, 1, 0);
     const armQuaternionOffset = new THREE.Quaternion().setFromUnitVectors(new THREE.Vector3(0, -1, 0), new THREE.Vector3(0, 0, -1));
@@ -543,22 +573,28 @@
 
           for (let i = 0; i < SIDES.length; i++) {
             const side = SIDES[i];
-            controllerPosition.fromArray(playerMatrix.gamepads[i].position);
-            controllerQuaternion.fromArray(playerMatrix.gamepads[i].quaternion);
-            localUpVector.copy(upVector).applyQuaternion(controllerQuaternion);
-            mesh.arms[side].getWorldPosition(armWorldPosition);
-            rotationMatrix.lookAt(
-              armWorldPosition,
-              controllerPosition,
-              localUpVector
-            );
-            armQuaternion
-              .setFromRotationMatrix(rotationMatrix)
-              .multiply(armQuaternionOffset)
-              .premultiply(playerQuaternionInverse);
-            armQuaternionInverse.copy(armQuaternion).inverse();
             const armRotation = uniforms[side === 'left' ? 'leftArmRotation' : 'rightArmRotation'];
-            armRotation.value.set(armQuaternionInverse.x, armQuaternionInverse.y, armQuaternionInverse.z, armQuaternionInverse.w);
+
+            if (playerMatrix.gamepads[i].enabled[0]) {
+              controllerPosition.fromArray(playerMatrix.gamepads[i].position);
+              controllerQuaternion.fromArray(playerMatrix.gamepads[i].quaternion);
+              localUpVector.copy(upVector).applyQuaternion(controllerQuaternion);
+
+              mesh.arms[side].getWorldPosition(armWorldPosition);
+              rotationMatrix.lookAt(
+                armWorldPosition,
+                controllerPosition,
+                localUpVector
+              );
+              armQuaternion
+                .setFromRotationMatrix(rotationMatrix)
+                .multiply(armQuaternionOffset)
+                .premultiply(playerQuaternionInverse);
+              armQuaternionInverse.copy(armQuaternion).inverse();
+              armRotation.value.set(armQuaternionInverse.x, armQuaternionInverse.y, armQuaternionInverse.z, armQuaternionInverse.w);
+            } else {
+              armRotation.value.set(0, 0, 0, 1);
+            }
           }
         };
 
@@ -1603,8 +1639,14 @@
 
           for (let i = 0; i < controllerMeshes.length; i++) {
             const controllerMesh = controllerMeshes[i];
+            playerMatrix.gamepads[i].enabled[0] = 1;
             controllerMesh.position.toArray(playerMatrix.gamepads[i].position);
             controllerMesh.quaternion.toArray(playerMatrix.gamepads[i].quaternion);
+          }
+
+          for (let i = 0; i < 2; i++) {
+            playerMatrix.hands[i].enabled[0] = 1;
+            // XXX pipe hands data
           }
 
           ws.send(playerMatrix);
